# bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  main.c  tcp_server.c  tcp_server.h  usb_cdc_host.c  usb_cdc_host.h
src/main/: CMakeLists.txt  bridge.c  bridge.h  http_status.c  http_status.h  main.c  ota.c  ota.h  tcp_server.c  tls_cert.c  tls_cert.h  version.h  wifi.c  wifi.h  ws_serial.c  ws_serial.h
tools/: gen_vcp_ids.py
